# openpose_ros_wrapper

./: .gitignore  README.md  tags
.gitignore/: .gitignore
activity_detection/: CMakeLists.txt  package.xml
activity_detection/action/: activityDetection.action
activity_detection/scripts/: actionlib  activityDetection_action.py  activityDetection_client.py
openpose_ros_wrapper_msgs/: CMakeLists.txt  package.xml
openpose_ros_wrapper_msgs/msg/: BodyPartDetection3d.msg  EyeDetection.msg  PersonDetection3d.msg  Persons3d.msg
openpose_wrapper/: CMakeLists.txt  package.xml  tags
openpose_wrapper/src/: 1  3d_backup.cpp  openpose_wrapper_3d_node.cpp  openpose_wrapper_nico_node.cpp  openpose_wrapper_node.cpp
visual_perception/: CMakeLists.txt
visual_perception/include/: filter_people_marker.h  humantracking.h  people_marker.h
visual_perception/launch/: people_marker.launch
visual_perception/src/: filter_people_marker.cpp  humantracking.cpp  people_marker.cpp
